change all file

--- a/index (1).html
+++ b/index (1).html
@@ -2,7 +2,11 @@
 <html>
   <head>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-      <script src="class (1).js"></script>
+      <script src="class.grass.js"></script>
+      <script src="class.grasseater.js"></script>
+      <script src="class.fungi.js"></script>
+      <script src="class.trapforeater.js"></script>
+      <script src="class.eater.js"></script>
       <script src="script (1).js"></script>
   </head>
   <body>
